Remove more quotes

--- a/BBIpaNameTest.xcodeproj/xcshareddata/xcschemes/BBIpaNameTest - Scheme.xcscheme
+++ b/BBIpaNameTest.xcodeproj/xcshareddata/xcschemes/BBIpaNameTest - Scheme.xcscheme
@@ -86,7 +86,7 @@
    </AnalyzeAction>
    <ArchiveAction
       buildConfiguration = "Release"
-      customArchiveName = "BBIpa name overriden&quot;"
+      customArchiveName = "BBIpa name overriden"
       revealArchiveInOrganizer = "YES">
    </ArchiveAction>
 </Scheme>
